Fixed minor layout issue in topic editor and added cancel button next to save button.

--- a/app/assets/stylesheets/custom/page--sidebars.less
+++ b/app/assets/stylesheets/custom/page--sidebars.less
@@ -38,6 +38,9 @@
     // Give main content some breathing room
     padding: @pageVerticalSpacing @pageHorizontalSpacing;
 
+    // Resize to width of container
+    flex-grow: 1;
+
     // Limit content max-width so lines don't get too long to easily read
     margin: 0 auto;
     max-width: 60rem;
